functionnal nav page

--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,7 @@ html {
   /* padding: 1rem; */
   /* position: absolute; */
   z-index: 1;
-  /* width: 30vw; */
+  width: 27vw;
   max-width: 220px;
   background-color: gray;
   min-height: 100vh;
